--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,3 +67,4 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:21.4.3'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
+apply plugin: 'com.google.gms.google-services'
