--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,10 +44,19 @@ dependencies:
   circular_profile_avatar:
   flutter_pdfview:
   path_provider:
+  flutter_share:
+  firebase_messaging:
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons:
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/pdf.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
